# student-digital-brain

./: .dockerignore  .editorconfig  .env.example  .flake8  .gitignore  .gitlab-ci.yml  .gitleaks.toml  .pre-commit-config.yaml  .secrets.baseline  .semgrep.yml  AGENTS.md  BACKEND_SUMMARY.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  ISSUE_PLAN.md  LICENSE  README.md  README_BACKEND.md  SECURITY.md  SPEC.md  TEAM_PLAN.md  USER_MANUAL.md  app.py  cliff.toml  pyproject.toml
.specify/: constitution.md
.specify/templates/: feature-spec.md  plan.md
components/: cards.py  graph_view.py  notifications.py  progress.py  search_box.py  sidebar.py  uploader.py
database/: __init__.py  neuronote.db
examples/: sample_notes.txt
pages/: Knowledge_Graph.py  dashboard.py  graph.py  progress.py  quiz.py  revision.py  search.py  settings.py  upload.py
scripts/: example_usage.py  local_audit.py
services/: backend.py  backend_placeholders.py
specs/offline-pdf-study-workflow/: spec.md
src/: __init__.py  api.py  config.py
src/database/: __init__.py  connection.py  repository.py  schema.py
src/graph/: __init__.py  builder.py
src/ingestion/: __init__.py  pdf_extractor.py
src/llm/: __init__.py  engine.py
src/models/: __init__.py
src/neuronote/: __init__.py  api.py  config.py  database.py  ingestion.py  llm.py  logging_config.py  ollama.py  prompts.py  search.py
src/neuronote.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ocr/: __init__.py  processor.py
src/parser/: __init__.py  json_parser.py  text_processor.py
src/search/: __init__.py  engine.py
src/services/: __init__.py  processor.py  quiz_service.py  revision_service.py
src/speech/: __init__.py  transcriber.py
src/utils/: __init__.py  exceptions.py  file_utils.py  logging.py
tests/: __init__.py  conftest.py  test_backend_api.py  test_database.py  test_e2e_backend.py  test_parser.py  test_services.py
