[project]
name = "neuronote"
version = "0.3.0"
description = "Offline-first CPU AI study assistant that converts PDFs, images, audio, and text into structured SQLite knowledge."
requires-python = ">=3.10"
dependencies = [
    "PyMuPDF>=1.24",
    "streamlit>=1.36",
]

[dependency-groups]
dev = [
    "bandit>=1.7.9",
    "mypy>=1.10",
    "pip-audit>=2.7",
    "pre-commit>=3.7",
    "pytest>=8.2",
    "ruff>=0.5",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
addopts = "--basetemp=.tmp-test"
python_files = [
    "test_backend_api.py",
    "test_database.py",
    "test_e2e_backend.py",
]

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
    ".git",
    ".venv",
    ".uv-cache",
    "data",
    "models",
    "tools",
    "src/api.py",
    "src/config.py",
    "src/database",
    "src/graph",
    "src/ingestion",
    "src/llm",
    "src/models",
    "src/neuronote.egg-info",
    "src/ocr",
    "src/parser",
    "src/search",
    "src/services",
    "src/speech",
    "src/utils",
    "tests/test_parser.py",
    "tests/test_services.py",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true
files = ["src/neuronote"]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "data", "models", "tools"]
skips = ["B404", "B603"]
